--- a/Sakina/app/src/main/res/values/colors.xml
+++ b/Sakina/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="neon_cyan">#00FFD1</color>
+    <color name="neon_purple">#BD00FF</color>
+    <color name="neon_gold">#FFD700</color>
+    <color name="neon_green">#00FF00</color>
+    <color name="neon_red">#FF0000</color>
+    <color name="CardBackground" >#1A1F2B</color>
 </resources>
