--- a/Sakina/app/src/main/res/values/themes.xml
+++ b/Sakina/app/src/main/res/values/themes.xml
@@ -9,5 +9,12 @@
             <item name="postSplashScreenTheme">@style/Theme.Sakina</item>
         </style>
 
-    <style name="Theme.Sakina" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Sakina" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowBackground">#020617</item>
+        <item name="android:colorBackground">#020617</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
 </resources>
